# mongonaut

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
.kiro/specs/mongodb-tui-client/: design.md  requirements.md  tasks.md
src/: config.rs  error.rs  main.rs
src/app/: mod.rs  screen.rs  state.rs
src/models/: mod.rs
src/services/: connection.rs  query.rs
src/ui/: collection_list.rs  connection.rs  database_list.rs  document_view.rs  mod.rs
