[package]
name = "mongonaut"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.18"
crossterm = "0.29.0"
mongodb = "3.3.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
