[package]
name = "kompass"
version = "0.1.0"
edition = "2024"
authors = [
    "Ojas <crestfallenwizard@gmail.com>",
    "Hushraj Singh <hushrajs@gmail.com>"
]
license = "MIT"
description = "A Rust-based Command Line Interface (CLI) tool for effortlessly navigating, querying, and interacting with MongoDB databases."
repository = "https://github.com/its-me-ojas/mongonaut"

[package.metadata.deb]
maintainer = "Ojas <crestfallenwizard@gmail.com>"
copyright = "Copyright (c) 2025"
license-file = "../LICENSE"
depends = "$auto"
section = "utils"
priority = "optional"

[package.metadata.wix]
eula = "../LICENSE"

[dependencies]
arboard = "3.6.1"
config = "0.15.18"
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.31"
mongodb = "3.3.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
